<resources>
    <string name="app_name">My Pediatric</string>

    <string name="btnLog">Ingresa</string>
    <string name="btnRegister">Registrate</string>
    <string name="txtvMove">Despaza hacia el centro\nla opcion a consultar</string>
    <string name="btnPediatras">Pediatras</string>

    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="chkRemember">Recordar mis datos</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="labelPassForgot">¿Olvidaste tu contraseña?</string>

    <string name="labelRegisterTitle">Regístrate</string>
    <string name="txtDocument">Tipo de documento</string>
    <string name="txtNumDocument">Numero de documento</string>
    <string name="txtNameF">Nombres</string>
    <string name="txtNameL">Apellidos</string>
    <string name="txtChromosome23">Genero:</string>
    <string name="rbMale">Masculino</string>
    <string name="rbFemale">Femenino</string>
    <string name="txtBirthDate">Fecha de nacimiento</string>
    <string name="txtAdress">Dirección</string>
    <string name="txtemail">Correo elecronico</string>
    <string name="chkTandc">Acepto términos y condiciones</string>
    <string name="btnRegisterMe">Registrarme</string>

    <string name="labelPediatras">Directorio Pediatras</string>
    <string name="txtConsultP">Seleccione el pediatra que desea consultar</string>
    <string name="txtSearchP">Buscar pediatra</string>

</resources>
